# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Check.yml
gendiff/: build_tree.py  generate_diff.py  parser.py
gendiff/formatters/: choose_format.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: nested.txt  plain.txt
