[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A Difference Calculator - tool for comparing json or yaml objects"
authors = ["Elena Shlius <eur1ezs@gmail.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.8",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/Terzia/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
